--- a/wwwroot/css/main.css
+++ b/wwwroot/css/main.css
@@ -127,8 +127,8 @@
 }
 
 .formControl {
-    margin: 100px 50px 50px 100px;
-    width: 460px;
+    margin: 30px 50px 20px 100px;
+    width: 480px;
     border: 1px solid #5c5c5c;
 }
 
@@ -164,7 +164,7 @@
         font-size: 27px;
         caret-color: transparent;
         font-weight: 600;
-        margin-top: 20px;
+        margin-top: 10px;
     }
 
 .section-server {
@@ -188,23 +188,27 @@
         color: #5c5c5c;
     }
 
-    .server-buttons a {
+    .server-buttons p {
+        cursor: pointer;
         text-decoration: none;
         font-size: 22px;
         color: #b0ad12;
+        caret-color: transparent;
         border-radius: 70px;
         background: #fff;
         font-weight: 600;
         text-align: center;
         vertical-align: middle;
-        width: 170px;
+        white-space: nowrap;
+        min-width: 190px;
+        outline: none;
         padding: 8px 20px;
         margin-top: 10px;
         border: 2px solid #b0ad12;
         transition: all 0.4s ease;
     }
 
-        .server-buttons a:hover {
+        .server-buttons p:hover {
             background: #b0ad12;
             color: #fff;
         }
